mule-user-guide/v/3.4/_toc.adoc
// TOC File

** link:/mule-user-guide/v/3.4/index[Mule User Guide]
** link:/mule-user-guide/v/3.4/hardware-and-software-requirements[Hardware and Software Requirements]
** link:/mule-user-guide/v/3.4/compatibility[Compatibility]
** link:/mule-user-guide/v/3.4/downloading-and-launching-mule-esb[Downloading and Launching Mule ESB]
** link:/mule-user-guide/v/3.4/adding-community-runtime[Adding Community Runtime]
** link:/mule-user-guide/v/3.4/installing-an-enterprise-license[Installing an Enterprise License]
** link:/mule-user-guide/v/3.4/installing-extensions[Installing Extensions]
** link:/mule-user-guide/v/3.4/studio-update-sites[Studio Update Sites]
** link:/mule-user-guide/v/3.4/studio-in-eclipse[Studio in Eclipse]
** link:/mule-user-guide/v/3.4/developing[Developing]
*** link:/mule-user-guide/v/3.4/message-sources[Message Sources]
**** link:/mule-user-guide/v/3.4/configuring-endpoints[Configuring Endpoints]
***** link:/mule-user-guide/v/3.4/mule-endpoint-uris[Mule Endpoint URIs]
**** link:/mule-user-guide/v/3.4/connecting-using-transports[Connecting Using Transports]
***** link:/mule-user-guide/v/3.4/configuring-a-transport[Configuring a Transport]
**** link:/mule-user-guide/v/3.4/studio-endpoints[Studio Endpoints]
***** link:/mule-user-guide/v/3.4/ajax-endpoint-reference[Ajax Endpoint Reference]
***** link:/mule-user-guide/v/3.4/database-jdbc-endpoint-reference[Database (JDBC) Endpoint Reference]
***** link:/mule-user-guide/v/3.4/file-endpoint-reference[File Endpoint Reference]
***** link:/mule-user-guide/v/3.4/ftp-endpoint-reference[FTP Endpoint Reference]
***** link:/mule-user-guide/v/3.4/generic-endpoint-reference[Generic Endpoint Reference]
***** link:/mule-user-guide/v/3.4/http-endpoint-reference[HTTP Endpoint Reference]
***** link:/mule-user-guide/v/3.4/imap-endpoint-reference[IMAP Endpoint Reference]
***** link:/mule-user-guide/v/3.4/pop3-endpoint-reference[POP3 Endpoint Reference]
***** link:/mule-user-guide/v/3.4/quartz-endpoint-reference[Quartz Endpoint Reference]
***** link:/mule-user-guide/v/3.4/sap-endpoint-reference[SAP Endpoint Reference]
***** link:/mule-user-guide/v/3.4/servlet-endpoint-reference[Servlet Endpoint Reference]
***** link:/mule-user-guide/v/3.4/sftp-endpoint-reference[SFTP Endpoint Reference]
***** link:/mule-user-guide/v/3.4/wmq-endpoint-reference[WMQ Endpoint Reference]
**** link:/mule-user-guide/v/3.4/anypoint-connectors[Anypoint Connectors]
***** link:/mule-user-guide/v/3.4/installing-connectors[Installing Connectors]
***** link:/mule-user-guide/v/3.4/using-a-connector-to-access-an-oauth-api[Using a Connector to Access an OAuth API]
***** link:/mule-user-guide/v/3.4/concur-connector[Concur Connector]
*** link:/mule-user-guide/v/3.4/message-processors[Message Processors]
**** link:/mule-user-guide/v/3.4/components[Components]
***** link:/mule-user-guide/v/3.4/configuring-components[Configuring Components]
****** link:/mule-user-guide/v/3.4/configuring-java-components[Configuring Java Components]
****** link:/mule-user-guide/v/3.4/developing-components[Developing Components]
******* link:/mule-user-guide/v/3.4/entry-point-resolver-configuration-reference[Entry Point Resolver Configuration Reference]
****** link:/mule-user-guide/v/3.4/component-bindings[Component Bindings]
****** link:/mule-user-guide/v/3.4/using-interceptors[Using Interceptors]
***** link:/mule-user-guide/v/3.4/echo-component-reference[Echo Component Reference]
***** link:/mule-user-guide/v/3.4/expression-component-reference[Expression Component Reference]
***** link:/mule-user-guide/v/3.4/flow-ref-component-reference[Flow Ref Component Reference]
***** link:/mule-user-guide/v/3.4/groovy-component-reference[Groovy Component Reference]
***** link:/mule-user-guide/v/3.4/java-component-reference[Java Component Reference]
***** link:/mule-user-guide/v/3.4/javascript-component-reference[JavaScript Component Reference]
***** link:/mule-user-guide/v/3.4/logger-component-reference[Logger Component Reference]
***** link:/mule-user-guide/v/3.4/python-component-reference[Python Component Reference]
***** link:/mule-user-guide/v/3.4/rest-component-reference[REST Component Reference]
***** link:/mule-user-guide/v/3.4/ruby-component-reference[Ruby Component Reference]
***** link:/mule-user-guide/v/3.4/script-component-reference[Script Component Reference]
***** link:/mule-user-guide/v/3.4/soap-component-reference[SOAP Component Reference]
**** link:/mule-user-guide/v/3.4/filters[Filters]
***** link:/mule-user-guide/v/3.4/using-filters[Using Filters]
***** link:/mule-user-guide/v/3.4/custom-filter[Custom Filter]
***** link:/mule-user-guide/v/3.4/exception-filter[Exception Filter]
***** link:/mule-user-guide/v/3.4/filter-ref[Filter Ref]
***** link:/mule-user-guide/v/3.4/logic-filter[Logic Filter]
***** link:/mule-user-guide/v/3.4/message-filter[Message Filter]
***** link:/mule-user-guide/v/3.4/message-property-filter[Message Property Filter]
***** link:/mule-user-guide/v/3.4/regex-filter[Regex Filter]
***** link:/mule-user-guide/v/3.4/schema-validation-filter[Schema Validation Filter]
***** link:/mule-user-guide/v/3.4/wildcard-filter[Wildcard Filter]
**** link:/mule-user-guide/v/3.4/routers[Routers]
***** link:/mule-user-guide/v/3.4/routing-message-processors[Routing Message Processors]
***** link:/mule-user-guide/v/3.4/all-flow-control-reference[All Flow Control Reference]
***** link:/mule-user-guide/v/3.4/choice-flow-control-reference[Choice Flow Control Reference]
***** link:/mule-user-guide/v/3.4/splitter-flow-control-reference[Splitter Flow Control Reference]
**** link:/mule-user-guide/v/3.4/scopes[Scopes]
***** link:/mule-user-guide/v/3.4/async-scope-reference[Async Scope Reference]
***** link:/mule-user-guide/v/3.4/cache-scope[Cache Scope]
***** link:/mule-user-guide/v/3.4/foreach[Foreach]
***** link:/mule-user-guide/v/3.4/message-enricher[Message Enricher]
***** link:/mule-user-guide/v/3.4/transactional[Transactional]
***** link:/mule-user-guide/v/3.4/until-successful-scope[Until Successful Scope]
**** link:/mule-user-guide/v/3.4/transformers[Transformers]
***** link:/mule-user-guide/v/3.4/using-transformers[Using Transformers]
****** link:/mule-user-guide/v/3.4/transformers-configuration-reference[Transformers Configuration Reference]
****** link:/mule-user-guide/v/3.4/native-support-for-json[Native Support for JSON]
****** link:/mule-user-guide/v/3.4/xmlprettyprinter-transformer[XmlPrettyPrinter Transformer]
****** link:/mule-user-guide/v/3.4/creating-custom-transformers[Creating Custom Transformers]
******* link:/mule-user-guide/v/3.4/creating-flow-objects-and-transformers-using-annotations[Creating Flow Objects and Transformers Using Annotations]
******** link:/mule-user-guide/v/3.4/function-annotation[Function Annotation]
******** link:/mule-user-guide/v/3.4/groovy-annotation[Groovy Annotation]
******** link:/mule-user-guide/v/3.4/inboundattachments-annotation[InboundAttachments Annotation]
******** link:/mule-user-guide/v/3.4/inboundheaders-annotation[InboundHeaders Annotation]
******** link:/mule-user-guide/v/3.4/lookup-annotation[Lookup Annotation]
******** link:/mule-user-guide/v/3.4/mule-annotation[Mule Annotation]
******** link:/mule-user-guide/v/3.4/outboundattachments-annotation[OutboundAttachments Annotation]
******** link:/mule-user-guide/v/3.4/outboundheaders-annotation[OutboundHeaders Annotation]
******** link:/mule-user-guide/v/3.4/payload-annotation[Payload Annotation]
******** link:/mule-user-guide/v/3.4/schedule-annotation[Schedule Annotation]
******** link:/mule-user-guide/v/3.4/transformer-annotation[Transformer Annotation]
******** link:/mule-user-guide/v/3.4/xpath-annotation[XPath Annotation]
******* link:/mule-user-guide/v/3.4/creating-custom-transformer-classes[Creating Custom Transformer Classes]
***** link:/mule-user-guide/v/3.4/append-string-transformer-reference[Append String Transformer Reference]
***** link:/mule-user-guide/v/3.4/attachment-transformer-reference[Attachment Transformer Reference]
***** link:/mule-user-guide/v/3.4/expression-transformer-reference[Expression Transformer Reference]
***** link:/mule-user-guide/v/3.4/java-transformer-reference[Java Transformer Reference]
***** link:/mule-user-guide/v/3.4/object-to-xml-transformer-reference[Object to XML Transformer Reference]
***** link:/mule-user-guide/v/3.4/parse-template-reference[Parse Template Reference]
***** link:/mule-user-guide/v/3.4/property-transformer-reference[Property Transformer Reference]
***** link:/mule-user-guide/v/3.4/script-transformer-reference[Script Transformer Reference]
***** link:/mule-user-guide/v/3.4/session-variable-transformer-reference[Session Variable Transformer Reference]
***** link:/mule-user-guide/v/3.4/set-payload-transformer-reference[Set Payload Transformer Reference]
***** link:/mule-user-guide/v/3.4/transformer-reference[Transformer Reference]
***** link:/mule-user-guide/v/3.4/variable-transformer-reference[Variable Transformer Reference]
***** link:/mule-user-guide/v/3.4/xml-to-object-transformer-reference[XML to Object Transformer Reference]
***** link:/mule-user-guide/v/3.4/xslt-transformer-reference[XSLT Transformer Reference]
**** link:/mule-user-guide/v/3.4/datamapper-user-guide-and-reference[Datamapper User Guide and Reference]
***** link:/mule-user-guide/v/3.4/datamapper-concepts[DataMapper Concepts]
***** link:/mule-user-guide/v/3.4/datamapper-visual-reference[DataMapper Visual Reference]
***** link:/mule-user-guide/v/3.4/defining-datamapper-input-and-output-metadata[Defining DataMapper Input and Output Metadata]
****** link:/mule-user-guide/v/3.4/defining-metadata-using-edit-fields[Defining Metadata Using Edit Fields]
****** link:/mule-user-guide/v/3.4/pojo-class-bindings-and-factory-classes[POJO Class Bindings and Factory Classes]
***** link:/mule-user-guide/v/3.4/building-a-mapping-flow-in-the-graphical-mapping-editor[Building a Mapping Flow in the Graphical Mapping Editor]
****** link:/mule-user-guide/v/3.4/mapping-flow-input-and-output-properties[Mapping Flow Input and Output Properties]
****** link:/mule-user-guide/v/3.4/datamapper-input-error-policy-for-bad-input-data[DataMapper Input Error Policy for Bad Input Data]
****** link:/mule-user-guide/v/3.4/using-datamapper-lookup-tables[Using DataMapper Lookup Tables]
****** link:/mule-user-guide/v/3.4/streaming-data-processing-with-datamapper[Streaming Data Processing with DataMapper]
***** link:/mule-user-guide/v/3.4/updating-metadata-in-an-existing-mapping[Updating Metadata in an Existing Mapping]
***** link:/mule-user-guide/v/3.4/mapping-elements-inside-lists[Mapping Elements Inside Lists]
***** link:/mule-user-guide/v/3.4/previewing-datamapper-results-on-sample-data[Previewing DataMapper Results on Sample Data]
***** link:/mule-user-guide/v/3.4/datamapper-examples[DataMapper Examples]
***** link:/mule-user-guide/v/3.4/datamapper-supplemental-topics[DataMapper Supplemental Topics]
****** link:/mule-user-guide/v/3.4/choosing-mel-or-ctl2-as-scripting-engine[Choosing MEL or CTL2 as Scripting Engine]
****** link:/mule-user-guide/v/3.4/datamapper-fixed-width-input-format[DataMapper Fixed Width Input Format]
****** link:/mule-user-guide/v/3.4/datamapper-flat-to-structured-and-structured-to-flat-mapping[DataMapper Flat-to-Structured and Structured-to-Flat Mapping]
**** link:/mule-user-guide/v/3.4/business-events[Business Events]
*** link:/mule-user-guide/v/3.4/error-handling[Error Handling]
**** link:/mule-user-guide/v/3.4/catch-exception-strategy[Catch Exception Strategy]
**** link:/mule-user-guide/v/3.4/choice-exception-strategy[Choice Exception Strategy]
**** link:/mule-user-guide/v/3.4/reference-exception-strategy[Reference Exception Strategy]
**** link:/mule-user-guide/v/3.4/rollback-exception-strategy[Rollback Exception Strategy]
**** link:/mule-user-guide/v/3.4/exception-strategy-most-common-use-cases[Exception Strategy Most Common Use Cases]
*** link:/mule-user-guide/v/3.4/transaction-management[Transaction Management]
**** link:/mule-user-guide/v/3.4/single-resource-transactions[Single Resource Transactions]
**** link:/mule-user-guide/v/3.4/multiple-resource-transactions[Multiple Resource Transactions]
**** link:/mule-user-guide/v/3.4/xa-transactions[XA Transactions]
*** link:/mule-user-guide/v/3.4/securing[Securing]
**** link:/mule-user-guide/v/3.4/anypoint-enterprise-security[Anypoint Enterprise Security]
***** link:/mule-user-guide/v/3.4/installing-anypoint-enterprise-security[Installing Anypoint Enterprise Security]
***** link:/mule-user-guide/v/3.4/mule-secure-token-service[Mule Secure Token Service]
****** link:/mule-user-guide/v/3.4/creating-an-oauth-2.0a-web-service-provider[Creating an OAuth 2.0a Web Service Provider]
****** link:/mule-user-guide/v/3.4/authorization-grant-types[Authorization Grant Types]
***** link:/mule-user-guide/v/3.4/mule-credentials-vault[Mule Credentials Vault]
***** link:/mule-user-guide/v/3.4/mule-message-encryption-processor[Mule Message Encryption Processor]
****** link:/mule-user-guide/v/3.4/pgp-encrypter[PGP Encrypter]
***** link:/mule-user-guide/v/3.4/mule-digital-signature-processor[Mule Digital Signature Processor]
***** link:/mule-user-guide/v/3.4/mule-filter-processor[Mule Filter Processor]
***** link:/mule-user-guide/v/3.4/mule-crc32-processor[Mule CRC32 Processor]
***** link:/mule-user-guide/v/3.4/anypoint-enterprise-security-example-application[Anypoint Enterprise Security Example Application]
***** link:/mule-user-guide/v/3.4/mule-sts-oauth-2.0a-example-application[Mule STS OAuth 2.0a Example Application]
**** link:/mule-user-guide/v/3.4/configuring-security[Configuring Security]
***** link:/mule-user-guide/v/3.4/configuring-the-spring-security-manager[Configuring the Spring Security Manager]
***** link:/mule-user-guide/v/3.4/component-authorization-using-spring-security[Component Authorization Using Spring Security]
***** link:/mule-user-guide/v/3.4/setting-up-ldap-provider-for-spring-security[Setting up LDAP Provider for Spring Security]
***** link:/mule-user-guide/v/3.4/upgrading-from-acegi-to-spring-security[Upgrading from Acegi to Spring Security]
***** link:/mule-user-guide/v/3.4/encryption-strategies[Encryption Strategies]
***** link:/mule-user-guide/v/3.4/pgp-security[PGP Security]
***** link:/mule-user-guide/v/3.4/jaas-security[Jaas Security]
***** link:/mule-user-guide/v/3.4/saml-module[SAML Module]
*** link:/mule-user-guide/v/3.4/mule-expression-language-mel[Mule Expression Language MEL]
**** link:/mule-user-guide/v/3.4/mule-expression-language-basic-syntax[Mule Expression Language Basic Syntax]
**** link:/mule-user-guide/v/3.4/mule-expression-language-examples[Mule Expression Language Examples]
**** link:/mule-user-guide/v/3.4/mule-expression-language-reference[Mule Expression Language Reference]
***** link:/mule-user-guide/v/3.4/mule-expression-language-date-and-time-functions[Mule Expression Language Date and Time Functions]
**** link:/mule-user-guide/v/3.4/mule-expression-language-tips[Mule Expression Language Tips]
*** link:/mule-user-guide/v/3.4/mule-datasense[Mule DataSense]
**** link:/mule-user-guide/v/3.4/testing-connections[Testing Connections]
**** link:/mule-user-guide/v/3.4/using-perceptive-flow-design[Using Perceptive Flow Design]
*** link:/mule-user-guide/v/3.4/mule-and-maven[Mule and Maven]
**** link:/mule-user-guide/v/3.4/converting-maven-into-studio[Converting Maven into Studio]
**** link:/mule-user-guide/v/3.4/converting-studio-into-maven[Converting Studio into Maven]
*** link:/mule-user-guide/v/3.4/advanced-usage-of-mule-esb[Advanced Usage of Mule ESB]
**** link:/mule-user-guide/v/3.4/storing-objects-in-the-registry[Storing Objects in the Registry]
**** link:/mule-user-guide/v/3.4/object-scopes[Object Scopes]
**** link:/mule-user-guide/v/3.4/using-mule-with-spring[Using Mule with Spring]
***** link:/mule-user-guide/v/3.4/sending-and-receiving-mule-events-in-spring[Sending and Receiving Mule Events in Spring]
***** link:/mule-user-guide/v/3.4/spring-application-contexts[Spring Application Contexts]
***** link:/mule-user-guide/v/3.4/using-spring-beans-as-flow-components[Using Spring Beans as Flow Components]
**** link:/mule-user-guide/v/3.4/configuring-properties[Configuring Properties]
**** link:/mule-user-guide/v/3.4/configuring-cluster-nodes[Configuring Cluster Nodes]
**** link:/mule-user-guide/v/3.4/distributed-file-polling[Distributed File Polling]
**** link:/mule-user-guide/v/3.4/distributed-locking[Distributed Locking]
**** link:/mule-user-guide/v/3.4/streaming[Streaming]
**** link:/mule-user-guide/v/3.4/about-configuration-builders[About Configuration Builders]
**** link:/mule-user-guide/v/3.4/internationalizing-strings[Internationalizing Strings]
**** link:/mule-user-guide/v/3.4/bootstrapping-the-registry[Bootstrapping the Registry]
**** link:/mule-user-guide/v/3.4/tuning-performance[Tuning Performance]
**** link:/mule-user-guide/v/3.4/mule-agents[Mule Agents]
***** link:/mule-user-guide/v/3.4/agent-security-disabled-weak-ciphers[Agent Security: Disabled Weak Ciphers]
***** link:/mule-user-guide/v/3.4/jmx-management[JMX Management]
**** link:/mule-user-guide/v/3.4/mule-object-stores[Mule Object Stores]
**** link:/mule-user-guide/v/3.4/flow-processing-strategies[Flow Processing Strategies]
**** link:/mule-user-guide/v/3.4/configuring-queues[Configuring Queues]
**** link:/mule-user-guide/v/3.4/configuring-reconnection-strategies[Configuring Reconnection Strategies]
**** link:/mule-user-guide/v/3.4/using-the-mule-client[Using the Mule Client]
**** link:/mule-user-guide/v/3.4/using-web-services[Using Web Services]
***** link:/mule-user-guide/v/3.4/proxying-web-services[Proxying Web Services]
***** link:/mule-user-guide/v/3.4/using-.net-web-services-with-mule[Using .NET Web Services with Mule]
**** link:/mule-user-guide/v/3.4/passing-additional-arguments-to-the-jvm-to-control-mule[Passing Additional Arguments to the JVM to Control Mule]
** link:/mule-user-guide/v/3.4/debugging[Debugging]
*** link:/mule-user-guide/v/3.4/studio-visual-debugger[Studio Visual Debugger]
*** link:/mule-user-guide/v/3.4/troubleshooting[Troubleshooting]
**** link:/mule-user-guide/v/3.4/configuring-mule-stacktraces[Configuring Mule Stacktraces]
**** link:/mule-user-guide/v/3.4/logging[Logging]
***** link:/mule-user-guide/v/3.4/logging-with-mule-esb-3.x[Logging With Mule ESB 3.x]
**** link:/mule-user-guide/v/3.4/step-debugging[Step Debugging]
** link:/mule-user-guide/v/3.4/testing[Testing]
*** link:/mule-user-guide/v/3.4/introduction-to-testing-mule[Introduction to Testing Mule]
*** link:/mule-user-guide/v/3.4/unit-testing[Unit Testing]
*** link:/mule-user-guide/v/3.4/functional-testing[Functional Testing]
*** link:/mule-user-guide/v/3.4/testing-strategies[Testing Strategies]
** link:/mule-user-guide/v/3.4/deploying[Deploying]
*** link:/mule-user-guide/v/3.4/deployment-scenarios[Deployment Scenarios]
**** link:/mule-user-guide/v/3.4/choosing-the-right-clustering-topology[Choosing the Right Clustering Topology]
**** link:/mule-user-guide/v/3.4/embedding-mule-in-a-java-application-or-webapp[Embedding Mule in a Java Application or Webapp]
**** link:/mule-user-guide/v/3.4/deploying-mule-to-jboss[Deploying Mule to JBoss]
***** link:/mule-user-guide/v/3.4/mule-as-mbean[Mule as MBean]
**** link:/mule-user-guide/v/3.4/deploying-mule-to-weblogic[Deploying Mule to WebLogic]
**** link:/mule-user-guide/v/3.4/deploying-mule-to-websphere[Deploying Mule to WebSphere]
**** link:/mule-user-guide/v/3.4/deploying-mule-as-a-service-to-tomcat[Deploying Mule as a Service to Tomcat]
**** link:/mule-user-guide/v/3.4/application-server-based-hot-deployment[Application Server Based Hot Deployment]
**** link:/mule-user-guide/v/3.4/classloader-control-in-mule[Classloader Control in Mule]
*** link:/mule-user-guide/v/3.4/mule-high-availability-ha-clusters[Mule High Availability HA Clusters]
**** link:/mule-user-guide/v/3.4/evaluating-mule-high-availability-clusters-demo[Evaluating Mule High Availability Clusters Demo]
***** link:/mule-user-guide/v/3.4/1-installing-the-demo-bundle[1 - Installing the Demo Bundle]
***** link:/mule-user-guide/v/3.4/2-creating-a-cluster[2 - Creating a Cluster]
***** link:/mule-user-guide/v/3.4/3-deploying-an-application[3 - Deploying an Application]
***** link:/mule-user-guide/v/3.4/4-applying-load-to-the-cluster[4 - Applying Load to the Cluster]
***** link:/mule-user-guide/v/3.4/5-witnessing-failover[5 - Witnessing Failover]
***** link:/mule-user-guide/v/3.4/6-troubleshooting-and-next-steps[6 - Troubleshooting and Next Steps]
*** link:/mule-user-guide/v/3.4/mule-deployment-model[Mule Deployment Model]
**** link:/mule-user-guide/v/3.4/hot-deployment[Hot Deployment]
**** link:/mule-user-guide/v/3.4/application-deployment[Application Deployment]
**** link:/mule-user-guide/v/3.4/application-format[Application Format]
**** link:/mule-user-guide/v/3.4/deployment-descriptor[Deployment Descriptor]
*** link:/mule-user-guide/v/3.4/configuring-logging[Configuring Logging]
*** link:/mule-user-guide/v/3.4/mule-server-notifications[Mule Server Notifications]
*** link:/mule-user-guide/v/3.4/profiling-mule[Profiling Mule]
*** link:/mule-user-guide/v/3.4/hardening-your-mule-installation[Hardening your Mule Installation]
*** link:/mule-user-guide/v/3.4/configuring-mule-for-different-deployment-scenarios[Configuring Mule for Different Deployment Scenarios]
**** link:/mule-user-guide/v/3.4/configuring-mule-as-a-linux-or-unix-daemon[Configuring Mule as a Linux or Unix Daemon]
**** link:/mule-user-guide/v/3.4/configuring-mule-as-a-windows-service[Configuring Mule as a Windows Service]
**** link:/mule-user-guide/v/3.4/configuring-mule-to-run-from-a-script[Configuring Mule to Run From a Script]
**** link:/mule-user-guide/v/3.4/configuring-mule-to-run-from-maven[Configuring Mule to Run From Maven]
*** link:/mule-user-guide/v/3.4/using-subversion-with-studio[Using Subversion with Studio]
** link:/mule-user-guide/v/3.4/extending[Extending]
*** link:/mule-user-guide/v/3.4/extending-components[Extending Components]
*** link:/mule-user-guide/v/3.4/custom-message-processors[Custom Message Processors]
*** link:/mule-user-guide/v/3.4/creating-example-archetypes[Creating Example Archetypes]
*** link:/mule-user-guide/v/3.4/creating-a-custom-xml-namespace[Creating a Custom XML Namespace]
*** link:/mule-user-guide/v/3.4/creating-module-archetypes[Creating Module Archetypes]
*** link:/mule-user-guide/v/3.4/creating-catalog-archetypes[Creating Catalog Archetypes]
*** link:/mule-user-guide/v/3.4/creating-project-archetypes[Creating Project Archetypes]
*** link:/mule-user-guide/v/3.4/creating-transports[Creating Transports]
**** link:/mule-user-guide/v/3.4/transport-archetype[Transport Archetype]
**** link:/mule-user-guide/v/3.4/transport-service-descriptors[Transport Service Descriptors]
*** link:/mule-user-guide/v/3.4/creating-custom-routers[Creating Custom Routers]
** link:/mule-user-guide/v/3.4/reference[Reference]
*** link:/mule-user-guide/v/3.4/team-development-with-mule[Team Development with Mule]
**** link:/mule-user-guide/v/3.4/modularizing-your-configuration-files-for-team-development[Modularizing Your Configuration Files for Team Development]
**** link:/mule-user-guide/v/3.4/using-side-by-side-configuration-files[Using Side-by-Side Configuration Files]
**** link:/mule-user-guide/v/3.4/using-parameters-in-your-configuration-files[Using Parameters in Your Configuration Files]
**** link:/mule-user-guide/v/3.4/using-modules-in-your-application[Using Modules In Your Application]
**** link:/mule-user-guide/v/3.4/sharing-custom-code[Sharing Custom Code]
**** link:/mule-user-guide/v/3.4/sharing-custom-configuration-fragments[Sharing Custom Configuration Fragments]
**** link:/mule-user-guide/v/3.4/sharing-custom-configuration-patterns[Sharing Custom Configuration Patterns]
**** link:/mule-user-guide/v/3.4/sharing-applications[Sharing Applications]
**** link:/mule-user-guide/v/3.4/sustainable-software-development-practices-with-mule[Sustainable Software Development Practices with Mule]
***** link:/mule-user-guide/v/3.4/reproducible-builds[Reproducible Builds]
***** link:/mule-user-guide/v/3.4/continuous-integration[Continuous Integration]
*** link:/mule-user-guide/v/3.4/configuration-patterns[Configuration Patterns]
**** link:/mule-user-guide/v/3.4/understanding-mule-configuration[Understanding Mule Configuration]
***** link:/mule-user-guide/v/3.4/about-the-xml-configuration-file[About the XML Configuration File]
**** link:/mule-user-guide/v/3.4/choosing-between-flows-and-patterns[Choosing Between Flows and Patterns]
***** link:/mule-user-guide/v/3.4/using-flows-for-service-orchestration[Using Flows for Service Orchestration]
***** link:/mule-user-guide/v/3.4/using-mule-configuration-patterns[Using Mule Configuration Patterns]
****** link:/mule-user-guide/v/3.4/pattern-based-configuration[Pattern-Based Configuration]
****** link:/mule-user-guide/v/3.4/simple-service-pattern[Simple Service Pattern]
****** link:/mule-user-guide/v/3.4/bridge-pattern[Bridge Pattern]
****** link:/mule-user-guide/v/3.4/validator-pattern[Validator Pattern]
****** link:/mule-user-guide/v/3.4/web-service-proxy-pattern[Web Service Proxy Pattern]
****** link:/mule-user-guide/v/3.4/http-proxy-pattern[HTTP Proxy Pattern]
****** link:/mule-user-guide/v/3.4/about-mule-configuration[About Mule Configuration]
****** link:/mule-user-guide/v/3.4/understanding-enterprise-integration-patterns-using-mule[Understanding Enterprise Integration Patterns Using Mule]
****** link:/mule-user-guide/v/3.4/understanding-orchestration-using-mule[Understanding Orchestration Using Mule]
****** link:/mule-user-guide/v/3.4/understanding-configuration-patterns-using-mule[Understanding Configuration Patterns Using Mule]
****** link:/mule-user-guide/v/3.4/connecting-with-transports-and-connectors[Connecting with Transports and Connectors]
****** link:/mule-user-guide/v/3.4/using-mule-with-web-services[Using Mule with Web Services]
*** link:/mule-user-guide/v/3.4/general-configuration-reference[General Configuration Reference]
**** link:/mule-user-guide/v/3.4/bpm-configuration-reference[BPM Configuration Reference]
**** link:/mule-user-guide/v/3.4/component-configuration-reference[Component Configuration Reference]
**** link:/mule-user-guide/v/3.4/endpoint-configuration-reference[Endpoint Configuration Reference]
**** link:/mule-user-guide/v/3.4/exception-strategy-configuration-reference[Exception Strategy Configuration Reference]
**** link:/mule-user-guide/v/3.4/filters-configuration-reference[Filters Configuration Reference]
**** link:/mule-user-guide/v/3.4/global-settings-configuration-reference[Global Settings Configuration Reference]
**** link:/mule-user-guide/v/3.4/notifications-configuration-reference[Notifications Configuration Reference]
**** link:/mule-user-guide/v/3.4/properties-configuration-reference[Properties Configuration Reference]
**** link:/mule-user-guide/v/3.4/security-manager-configuration-reference[Security Manager Configuration Reference]
**** link:/mule-user-guide/v/3.4/transactions-configuration-reference[Transactions Configuration Reference]
*** link:/mule-user-guide/v/3.4/transports-reference[Transports Reference]
**** link:/mule-user-guide/v/3.4/ajax-transport-reference[AJAX Transport Reference]
**** link:/mule-user-guide/v/3.4/ejb-transport-reference[EJB Transport Reference]
**** link:/mule-user-guide/v/3.4/email-transport-reference[Email Transport Reference]
**** link:/mule-user-guide/v/3.4/file-transport-reference[File Transport Reference]
**** link:/mule-user-guide/v/3.4/ftp-transport-reference[FTP Transport Reference]
**** link:/mule-user-guide/v/3.4/mulesoft-enterprise-java-connector-for-sap-reference[MuleSoft Enterprise Java Connector for SAP Reference]
***** link:/mule-user-guide/v/3.4/sap-jco-extended-properties[SAP JCo Extended Properties]
***** link:/mule-user-guide/v/3.4/sap-jco-server-services-configuration[SAP JCo Server Services Configuration]
***** link:/mule-user-guide/v/3.4/outbound-endpoint-transactions[Outbound Endpoint Transactions]
***** link:/mule-user-guide/v/3.4/troubleshooting-sap-connector[Troubleshooting SAP Connector]
***** link:/mule-user-guide/v/3.4/xml-definitions[XML Definitions]
**** link:/mule-user-guide/v/3.4/http-transport-reference[HTTP Transport Reference]
**** link:/mule-user-guide/v/3.4/https-transport-reference[HTTPS Transport Reference]
**** link:/mule-user-guide/v/3.4/imap-transport-reference[IMAP Transport Reference]
**** link:/mule-user-guide/v/3.4/jdbc-transport-reference[JDBC Transport Reference]
***** link:/mule-user-guide/v/3.4/jdbc-transport-performance-benchmark-results[JDBC Transport Performance Benchmark Results]
**** link:/mule-user-guide/v/3.4/jetty-transport-reference[Jetty Transport Reference]
***** link:/mule-user-guide/v/3.4/jetty-ssl-transport[Jetty SSL Transport]
**** link:/mule-user-guide/v/3.4/jms-transport-reference[JMS Transport Reference]
***** link:/mule-user-guide/v/3.4/activemq-integration[ActiveMQ Integration]
***** link:/mule-user-guide/v/3.4/hornetq-integration[HornetQ Integration]
***** link:/mule-user-guide/v/3.4/open-mq-integration[Open MQ Integration]
***** link:/mule-user-guide/v/3.4/solace-jms[Solace JMS]
***** link:/mule-user-guide/v/3.4/tibco-ems-integration[Tibco EMS Integration]
**** link:/mule-user-guide/v/3.4/multicast-transport-reference[Multicast Transport Reference]
**** link:/mule-user-guide/v/3.4/pop3-transport-reference[POP3 Transport Reference]
**** link:/mule-user-guide/v/3.4/quartz-transport-reference[Quartz Transport Reference]
**** link:/mule-user-guide/v/3.4/rmi-transport-reference[RMI Transport Reference]
**** link:/mule-user-guide/v/3.4/servlet-transport-reference[Servlet Transport Reference]
**** link:/mule-user-guide/v/3.4/sftp-transport-reference[SFTP Transport Reference]
**** link:/mule-user-guide/v/3.4/smtp-transport-reference[SMTP Transport Reference]
**** link:/mule-user-guide/v/3.4/ssl-and-tls-transports-reference[SSL and TLS Transports Reference]
**** link:/mule-user-guide/v/3.4/stdio-transport-reference[STDIO Transport Reference]
**** link:/mule-user-guide/v/3.4/tcp-transport-reference[TCP Transport Reference]
**** link:/mule-user-guide/v/3.4/udp-transport-reference[UDP Transport Reference]
**** link:/mule-user-guide/v/3.4/vm-transport-reference[VM Transport Reference]
**** link:/mule-user-guide/v/3.4/mule-wmq-transport-reference[Mule WMQ Transport Reference]
**** link:/mule-user-guide/v/3.4/wsdl-connectors[WSDL Connectors]
**** link:/mule-user-guide/v/3.4/xmpp-transport-reference[XMPP Transport Reference]
*** link:/mule-user-guide/v/3.4/modules-reference[Modules Reference]
**** link:/mule-user-guide/v/3.4/atom-module-reference[Atom Module Reference]
**** link:/mule-user-guide/v/3.4/bpm-module-reference[BPM Module Reference]
***** link:/mule-user-guide/v/3.4/drools-module-reference[Drools Module Reference]
***** link:/mule-user-guide/v/3.4/jboss-jbpm-module-reference[JBoss jBPM Module Reference]
**** link:/mule-user-guide/v/3.4/cxf-module-reference[CXF Module Reference]
***** link:/mule-user-guide/v/3.4/cxf-error-handling[CXF Error Handling]
***** link:/mule-user-guide/v/3.4/cxf-module-configuration-reference[CXF Module Configuration Reference]
***** link:/mule-user-guide/v/3.4/cxf-module-overview[CXF Module Overview]
***** link:/mule-user-guide/v/3.4/building-web-services-with-cxf[Building Web Services with CXF]
***** link:/mule-user-guide/v/3.4/consuming-web-services-with-cxf[Consuming Web Services with CXF]
***** link:/mule-user-guide/v/3.4/enabling-ws-addressing[Enabling WS-Addressing]
***** link:/mule-user-guide/v/3.4/enabling-ws-security[Enabling WS-Security]
***** link:/mule-user-guide/v/3.4/proxying-web-services-with-cxf[Proxying Web Services with CXF]
***** link:/mule-user-guide/v/3.4/supported-web-service-standards[Supported Web Service Standards]
***** link:/mule-user-guide/v/3.4/using-a-web-service-client-directly[Using a Web Service Client Directly]
***** link:/mule-user-guide/v/3.4/using-http-get-requests[Using HTTP GET Requests]
***** link:/mule-user-guide/v/3.4/using-mtom[Using MTOM]
**** link:/mule-user-guide/v/3.4/data-bindings-reference[Data Bindings Reference]
**** link:/mule-user-guide/v/3.4/jaas-module-reference[JAAS Module Reference]
**** link:/mule-user-guide/v/3.4/jboss-transaction-manager-reference[JBoss Transaction Manager Reference]
**** link:/mule-user-guide/v/3.4/jersey-module-reference[Jersey Module Reference]
**** link:/mule-user-guide/v/3.4/json-module-reference[JSON Module Reference]
**** link:/mule-user-guide/v/3.4/rss-module-reference[RSS Module Reference]
**** link:/mule-user-guide/v/3.4/scripting-module-reference[Scripting Module Reference]
**** link:/mule-user-guide/v/3.4/spring-extras-module-reference[Spring Extras Module Reference]
**** link:/mule-user-guide/v/3.4/sxc-module-reference[SXC Module Reference]
**** link:/mule-user-guide/v/3.4/xml-module-reference[XML Module Reference]
***** link:/mule-user-guide/v/3.4/domtoxml-transformer[DomToXml Transformer]
***** link:/mule-user-guide/v/3.4/jaxb-bindings[JAXB Bindings]
***** link:/mule-user-guide/v/3.4/jaxb-transformers[JAXB Transformers]
***** link:/mule-user-guide/v/3.4/jxpath-extractor-transformer[JXPath Extractor Transformer]
***** link:/mule-user-guide/v/3.4/xml-namespaces[XML Namespaces]
***** link:/mule-user-guide/v/3.4/xmlobject-transformers[XmlObject Transformers]
***** link:/mule-user-guide/v/3.4/xmltoxmlstreamreader-transformer[XmlToXMLStreamReader Transformer]
***** link:/mule-user-guide/v/3.4/xpath-extractor-transformer[XPath Extractor Transformer]
***** link:/mule-user-guide/v/3.4/xquery-support[XQuery Support]
***** link:/mule-user-guide/v/3.4/xquery-transformer[XQuery Transformer]
***** link:/mule-user-guide/v/3.4/xslt-transformer[XSLT Transformer]
*** link:/mule-user-guide/v/3.4/non-mel-expressions-configuration-reference[Non-MEL Expressions Configuration Reference]
**** link:/mule-user-guide/v/3.4/creating-non-mel-expression-evaluators[Creating Non-MEL Expression Evaluators]
**** link:/mule-user-guide/v/3.4/using-non-mel-expressions[Using Non-MEL Expressions]
*** link:/mule-user-guide/v/3.4/schema-documentation[Schema Documentation]
**** link:/mule-user-guide/v/3.4/notes-on-mule-3.0-schema-changes[Notes on Mule 3.0 Schema Changes]
*** link:/mule-user-guide/v/3.4/mule-esb-3-and-test-api-javadoc[Mule ESB 3 and Test API Javadoc]
*** link:/mule-user-guide/v/3.4/mulesoft-security-update-policy[MuleSoft Security Update Policy]
